# image_text_2_text

./: .gitignore  CLAUDE.md  compare_models.py  convert_heic.py  convert_media.py  extract_metadata.py  organize_by_camera.py  pyproject.toml  test_gemma.py  test_qwen.py  test_qwen_simple.py
